# huggingface-chatbot

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test.py
alembic/: env.py
alembic/versions/: d4016cd9db34_.py
app/: main.py
app/api/routes/: chat_bot.py  health.py  pages.py
app/api/routes/schemas/: chat_bot_schema.py
app/api/services/: bootstrap.py  chat_model.py
app/core/: config.py
app/db/: __init__.py  base.py  models.py  session.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: index.html
tests/: test_health.py
